@@ -94,15 +94,18 @@ import zipfile
 #replacing_dict = {"Provincie_Zuid-Holland":"South Holland","Provincie_Zeeland":"Zealand",
 #                  "Provincie_Noord-Holland":"North Holland", "Provincie_Noord-Brabant": "North Brabant"}
 
-replacing_dict_after_region_filling = { } 
+#replacing_dict_after_region_filling = { } 
 
-country = "Bulgaria"
-country_code = "BG"
-replacing_dict = {"Oblast_Turgovishte":"Targovishte", "Oblast_Veliko_Turnovo":"Veliko Tarnovo",
-                  "Oblast_Yambol":"Jambol", "Oblast_Kurdzhali":"Kardzhali",
-                  "Oblast_Sofiya-Grad":"Sofia", "Oblast_Stara_Zagora":"Stara Zagora",
-                  "Oblast_Khaskovo":"Haskovo", "Oblast_Sofiya":"Sofia-distriktet",
-                  "Oblast_Smolyan":"Smoljan"}
+country = "Argentina"
+country_code = "AR"
+replacing_dict = {"Provincia_de_Buenos_Aires":"Buenos Aires", "Santa_Fe_Province": "Santa Fe",
+                  "Provincia_de_Santiago_del_Estero":"Santiago del Estero",
+                  "Provincia_de_Tierra_del_Fuego,_Antartida_e_Islas_del_Atlantico_Sur":"Tierra del Fuego",
+                  "Provincia_de_La_Rioja":"La Rioja", "Provincia_de_Entre_Rios":"Entre Ríos",
+                  "Provincia_de_Santa_Cruz":"Santa Cruz", "Ciudad_Autonoma_de_Buenos_Aires":"Buenos Aires",
+                  "Provincia_de_Rio_Negro":"Río Negro", "Provincia_de_La_Pampa":"La Pampa",
+                  "Provincia_de_San_Luis":"San Luis","Provincia_de_San_Juan":"San Juan"}
+                  
 
 replacing_dict_after_region_filling = { } 
 
@@ -128,6 +131,12 @@ def normalizing (source):
     result = result.replace(" ","_")
     result = result.replace("%20","_")
     return result
+
+def normalizing4 (source):
+    result = source.replace("'","")
+    result = result.replace("%20"," ")
+    return result
+
 
 
 #connect to database
@@ -242,15 +251,15 @@ for line in fh.readlines():
 #            print region_id 
 #            print  normalizing(pattern[4])
 #            print "select id from stations where region_id='%i' and name = '%s'" %(region_id, normalizing(pattern[4]));
-            cur = cu.execute("select id from stations where region_id='%i' and name = '%s'" %(region_id, normalizing(pattern[4])))
+            cur = cu.execute("select id from stations where region_id='%i' and name = '%s'" %(region_id, normalizing4(pattern[4])))
             station_id= None
             for row in cur:
                 station_id = row[0]
             if (station_id == None):
-                cur = cu.execute("insert into stations (region_id, name, longititude, latitude, code) values ( '%i', '%s', '%s', '%s', '%s')" %(region_id, normalizing(pattern[4]), pattern[10], pattern[8], result.replace("'","%27")))
+                cur = cu.execute("insert into stations (region_id, name, longititude, latitude, code) values ( '%i', '%s', '%s', '%s', '%s')" %(region_id, normalizing4(pattern[4]), pattern[10], pattern[8], result.replace("'","%27")))
                 c.commit()
             else:
-                cur = cu.execute("update stations set region_id ='%i', name='%s', longititude='%s', latitude='%s', code='%s' where id ='%i'" %(region_id, normalizing(pattern[4]), pattern[10], pattern[8], result.replace("'","%27"), station_id))
+                cur = cu.execute("update stations set region_id ='%i', name='%s', longititude='%s', latitude='%s', code='%s' where id ='%i'" %(region_id, normalizing4(pattern[4]), pattern[10], pattern[8], result.replace("'","%27"), station_id))
                 c.commit()
 fh.close
 
